--- a/TempmeT/index.html
+++ b/TempmeT/index.html
@@ -1,10 +1,8 @@
-﻿@model SMS_MVCAPP.Models.Entities.Admin
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- Design by foolishdeveloper.com -->
-    <title>PIEMART- REGISTER -LOGIN</title>
+    <title>Glassmorphism login Form Tutorial in html css</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -82,7 +80,7 @@
 
         label{
             display: block;
-            margin-top: 10px;
+            margin-top: 30px;
             font-size: 16px;
             font-weight: 500;
         }
@@ -93,16 +91,15 @@
             background-color: rgba(255,255,255,0.07);
             border-radius: 3px;
             padding: 0 10px;
-            margin-top: 5px;
+            margin-top: 8px;
             font-size: 14px;
             font-weight: 300;
         }
         ::placeholder{
             color: #e5e5e5;
         }
-        /*login  button*/
         button{
-            margin-top: 20px;
+            margin-top: 50px;
             width: 100%;
             background-color: #ffffff;
             color: #080710;
@@ -139,26 +136,22 @@
 </head>
 <body>
 <div class="background">
-<!--    <div class="shape"></div>-->
     <div class="shape"></div>
     <div class="shape"></div>
 </div>
-<form asp-action="LoginAdmin">
-    <h3>PIEMALL</h3>
+<form>
+    <h3>Login Here</h3>
 
-    <label for="staffId">Staff ID <i class='far fa-address-card'></i></label>
-    <input type="text" placeholder="Staff Id or Email" id="staffId" name="StaffId">
+    <label for="username">Username</label>
+    <input type="text" placeholder="Email or Phone" id="username">
 
-    <label for="password">Password <i class='fas fa-user-secret'></i></label>
-    <input type="password" placeholder="Password" id="password" name="Password">
+    <label for="password">Password</label>
+    <input type="password" placeholder="Password" id="password">
 
-    <button><i class='fas fa-user-check'style='color:#080710'></i> Log In</button>
-<!--    <button>Register</button>-->
+    <button>Log In</button>
     <div class="social">
-<!--        <div class="go"><i class="fab fa-google"></i>  Google</div>-->
-        <div class="go"><i class='fas fa-user-circle'></i> Register</div>
-        <div class="fb"><i class='fas fa-user-check'></i>  Login</div>
-<!--        <div class="fb"><i class="fab fa-facebook"></i>  Facebook</div>-->
+        <div class="go"><i class="fab fa-google"></i>  Google</div>
+        <div class="fb"><i class="fab fa-facebook"></i>  Facebook</div>
     </div>
 </form>
 </body>
