--- a/TempmeT/loginonly/index.html
+++ b/TempmeT/loginonly/index.html
@@ -1,5 +1,3 @@
-﻿@model SMS_MVCAPP.Models.Entities.Admin
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -143,14 +141,14 @@
     <div class="shape"></div>
     <div class="shape"></div>
 </div>
-<form asp-action="LoginAdmin">
+<form>
     <h3>PIEMALL</h3>
 
     <label for="staffId">Staff ID <i class='far fa-address-card'></i></label>
-    <input type="text" placeholder="Staff Id or Email" id="staffId" name="StaffId">
+    <input type="text" placeholder="Staff Id or Email" id="staffId">
 
     <label for="password">Password <i class='fas fa-user-secret'></i></label>
-    <input type="password" placeholder="Password" id="password" name="Password">
+    <input type="password" placeholder="Password" id="password">
 
     <button><i class='fas fa-user-check'style='color:#080710'></i> Log In</button>
 <!--    <button>Register</button>-->
