--- a/TempmeT/Admin Dashboard/index.html
+++ b/TempmeT/Admin Dashboard/index.html
@@ -16,7 +16,7 @@
       <div class="logo">
         <a href="#">PIEMALL</a>
         <div class="search_box">
-          <input type="text" placeholder="Search EasyPay" />
+          <input type="text" placeholder="Search PIEMALL" />
           <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
         </div>
       </div>
@@ -25,7 +25,7 @@
         <i class="fas fa-bell"></i>
         <div class="account">
           <img src="./pic/img.jpg" alt="" />
-          <h4>Jhon Viek</h4>
+          <h4>Logged Attendant</h4>
         </div>
       </div>
     </header>
@@ -70,9 +70,9 @@
                 <tr>
                   <th>#</th>
                   <th>Dates</th>
-                  <th>Name</th>
-                  <th>Type</th>
-                  <th>Ammount</th>
+                  <th>Cust.Name</th>
+                  <th>Products</th>
+                  <th>Amount</th>
                 </tr>
               </thead>
               <tbody>
@@ -91,88 +91,60 @@
                   <td>Silver</td>
                   <td>$5,000.00</td>
                 </tr>
-                <tr>
-                  <td>3</td>
-                  <td>15, July, 2022</td>
-
-                  <td>Jhon David</td>
-                  <td>Startup</td>
-                  <td>$3000.00</td>
-                </tr>
-                <tr>
-                  <td>4</td>
-                  <td>5, July, 2022</td>
-                  <td>Salina Gomiz</td>
-                  <td>Premimum</td>
-                  <td>$7000.00</td>
-                </tr>
-                <tr>
-                  <td>5</td>
-                  <td>29, June, 2022</td>
-                  <td>Gomiz</td>
-                  <td>Gold</td>
-                  <td>$4000.00</td>
-                </tr>
-                <tr>
-                  <td>6</td>
-                  <td>28, June, 2022</td>
-                  <td>Elyana Jhon</td>
-                  <td>Premimum</td>
-                  <td>$2000.00</td>
-                </tr>
+                
               </tbody>
             </table>
           </div>
 
           <div class="list2">
             <div class="row">
-              <h4>Documnets</h4>
+              <h4>Inventory Updated.</h4>
               <a href="#">Upload</a>
             </div>
             <table>
               <thead>
                 <tr>
                   <th>#</th>
-                  <th>Title</th>
-                  <th>Type</th>
-                  <th>Uplaoded</th>
+                  <th>Products Name</th>
+                  <th>Barcode</th>
+                  <th>Qty</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
                   <td>1</td>
                   <td>CNIC</td>
-                  <td>PDF</td>
+                  <td>62543</td>
                   <td>20</td>
                 </tr>
                 <tr>
                   <td>2</td>
                   <td>Passport</td>
-                  <td>PDF</td>
+                  <td>23434</td>
                   <td>12</td>
                 </tr>
                 <tr>
                   <td>3</td>
                   <td>Licence</td>
-                  <td>PDF</td>
+                  <td>34535</td>
                   <td>9</td>
                 </tr>
                 <tr>
                   <td>4</td>
                   <td>Pic</td>
-                  <td>Jpg</td>
+                  <td>3543534</td>
                   <td>22</td>
                 </tr>
                 <tr>
                   <td>5</td>
                   <td>CNIC</td>
-                  <td>Jpg</td>
+                  <td>35453</td>
                   <td>22</td>
                 </tr>
                 <tr>
                   <td>6</td>
-                  <td>Docx</td>
-                  <td>Word</td>
+                  <td>Maggi</td>
+                  <td>234423</td>
                   <td>22</td>
                 </tr>
               </tbody>
